--- a/_publications/2024-02-29-paper-3.md
+++ b/_publications/2024-02-29-paper-3.md
@@ -8,6 +8,6 @@ excerpt:
 date: 2025-01-19
 venue: International Conference on Computational Linguistics (COLING)
 slidesurl: 
-paperurl: 'https://arxiv.org/abs/2402.19248'
+paperurl: 'https://aclanthology.org/2025.coling-main.695/'
 citation: 
 ---
