--- a/_publications/2024-10-21-paper-5.md
+++ b/_publications/2024-10-21-paper-5.md
@@ -8,7 +8,7 @@ excerpt:
 date: 2025-1-22
 venue: Main Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics (NAACL)
 slidesurl: 
-paperurl: 'https://arxiv.org/abs/2410.16235'
+paperurl: 'https://aclanthology.org/2025.naacl-long.157/'
 citation: 
 ---
 
