--- a/_publications/2025-02-12-paper-6.md
+++ b/_publications/2025-02-12-paper-6.md
@@ -8,7 +8,7 @@ excerpt:
 date: 2025-2-12
 venue: International Conference on Machine Learning (ICML)
 slidesurl: 
-paperurl: https://arxiv.org/abs/2502.10454
+paperurl: 'https://icml.cc/virtual/2025/poster/46191'
 citation: 
 ---
 
