update paper link

--- a/_publications/2024-09-20-paper-4.md
+++ b/_publications/2024-09-20-paper-4.md
@@ -1,6 +1,6 @@
 ---
 title: "VISUAL-ALPHASOCIAL: Benchmark and Self-Reflective Chain-of-Thought Generation for Visual Social Commonsense Reasoning"
-authors: 'Zongyu Lin*, <strong>Zhikun Xu*</strong>, Xiaohan Song, Yixin Wan, Xingcheng Yao, Tsung-Han Lin, Selina Song, Pranav Subbaraman, Ben Zhou, Kai-Wei Chang, Yizhou Sun'
+authors: 'Zongyu Lin*, <strong>Zhikun Xu*</strong>, Xiaohan Song*, Yixin Wan, Xingcheng Yao, Tsung-Han Lin, Selina Song, Pranav Subbaraman, Ben Zhou, Kai-Wei Chang, Yizhou Sun'
 collection: publications
 category: conferences
 permalink: /publication/2024-09-20-paper-4
@@ -8,7 +8,7 @@ excerpt:
 date: 2025-05-15
 venue: 'Findings of Association for Computational Linguistics (ACL)'
 slidesurl: 
-paperurl: 
+paperurl: 'https://aclanthology.org/2025.findings-acl.975/'
 citation: 
 ---
 
