--- a/_publications/2023-05-01-paper-1.md
+++ b/_publications/2023-05-01-paper-1.md
@@ -7,6 +7,6 @@ permalink: /publication/2023-05-01-paper-1
 excerpt: 
 date: 2023-05-1
 venue: 'Findings of Association for Computational Linguistics (ACL)'
-paperurl: 'https://arxiv.org/abs/2305.17050'
+paperurl: 'https://aclanthology.org/2023.findings-acl.131/'
 citation: 
 ---
