--- a/_publications/2025-02-12-paper-6.md
+++ b/_publications/2025-02-12-paper-6.md
@@ -8,7 +8,7 @@ excerpt:
 date: 2025-2-12
 venue: International Conference on Machine Learning (ICML)
 slidesurl: 
-paperurl: 'https://icml.cc/virtual/2025/poster/46191'
+paperurl: 'https://openreview.net/forum?id=A31Ep22iQ7&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICML.cc%2F2025%2FConference%2FAuthors%23your-submissions)'
 citation: 
 ---
 
