--- a/_publications/2025-06-09-paper-7.md
+++ b/_publications/2025-06-09-paper-7.md
@@ -2,11 +2,11 @@
 title: "<em>QA-LIGN:</em> Aligning LLMs through Constitutionally Decomposed QA"
 authors: 'Jacob Dineen, Aswin RRV, Qin Liu, <strong>Zhikun Xu</strong>, Xiao Ye, Ming Shen, Zhaonan Li, Shijie Lu, Chitta Baral, Muhao Chen, Ben Zhou'
 collection: publications
-category: preprints
+category: conferences
 permalink: /publication/2025-06-09-paper-7
 excerpt: 
 date: 2025-06-09
-venue: arXiv
+venue: 'Findings of Empirical Methods in Natural Language Processing (EMNLP)'
 slidesurl: 
 paperurl: https://arxiv.org/abs/2506.08123
 citation: 
