--- a/_publications/2025-06-16-paper-8.md
+++ b/_publications/2025-06-16-paper-8.md
@@ -1,6 +1,6 @@
 ---
 title: "BOW: Bottlenecked Next Word Exploration"
-authors: 'Ming Shen*, <strong>Zhikun Xu*</strong>, Xiao Ye, Jacob Dineen, Ben Zhou'
+authors: 'Ming Shen*, <strong>Zhikun Xu*</strong>, Jacob Dineen, Xiao Ye, Ben Zhou'
 collection: publications
 category: preprints
 permalink: /publication/2025-06-16-paper-8
