--- a/_publications/2025-10-01-paper-11.md
+++ b/_publications/2025-10-01-paper-11.md
@@ -1,6 +1,6 @@
 ---
 title: "RELATE-Sim: Leveraging Turning Point Theory and LLM Agents to Predict and Understand Long-Term Relationship Dynamics through Interactive Narrative Simulations"
-authors: 'Matthew Yue, <strong>Zhikun Xu</strong>, Vivek Gupta, Thao Ha, Liesal Sharabi, Ben Zhou'
+authors: 'Matthew Yue, <strong>Zhikun Xu†</strong>, Vivek Gupta, Thao Ha, Liesal Sharabi, Ben Zhou'
 collection: publications
 category: preprints
 permalink: /publication/2025-10-01-paper-11
